--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -3,7 +3,7 @@ fr:
     comments:
       leave_a_comment: "Laissez un commentaire"
       name: "Nom *"
-      never_displayed: "(Jamais affiché)"
+      email_never_displayed: "Email * (Jamais affiché)"
       your_website: "Votre site web"
       your_comment: "Votre commentaire *"
       add_comment: "Ajouter un commentaire"
@@ -11,6 +11,7 @@ fr:
       wrote: "%{author} a écrit:"
       posted_on: "Publié le "
       delete: "effacer"
+      are_you_sure_you_want_to_remove_this_comment: "Etes vous certain de vouloir supprimer ce commentaire?"
       successfully_added_comment: "Commentaire ajouté avec succès."
       successfully_removed_comment: "Commentaire supprimé avec succès."
     posts:
@@ -20,15 +21,15 @@ fr:
         one: "Une erreur a empêché cet article d'être enregistré :"
         other: "%{count} erreurs ont empêché cet article d'être enregistré :"
       give_your_post_a_title: "Donnez un nom à votre article"
-      write_something_here: "Ecrive quelque chose ici ..."
+      write_something_here: "Ecrivez quelque chose ici ..."
       tags: "Libellés"
-      tag_placeholder: "libellé 1, libellé 2 ..."
+      tag_placeholder: "Libellé 1, Libellé 2 ..."
       tip_you_can_style_your_post_using: "Astuce : vous pouvez styler votre article en utilisant %{parser}"
       or: "ou"
       cancel: "annuler"
       edit: "editer"
       delete: "supprimer"
-      are_you_sure_you_want_to_remove_this_post: "Etes vous certain de vouloir supprimé cet article?"
+      are_you_sure_you_want_to_remove_this_post: "Etes vous certain de vouloir supprimer cet article?"
       comment:
         zero: "Aucun commentaire"
         one: "1 commentaire"
