--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -37,10 +37,11 @@ en:
       blog_post_was_successfully_updated: "Blog post was successfully updated."
       blog_post_was_successfully_destroyed: "Blog post was successfully destroyed."
       related_posts: "Related posts"
+      tag_placeholder: "Add tags to your post"
+      
     share_bar:
       facebook: "en_US"
 
   time:
     formats:
       plain_month_only: "%B"
-
