quote en i18n translations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -38,8 +38,8 @@ en:
       blog_post_was_successfully_destroyed: "Blog post was successfully destroyed."
       related_posts: "Related posts"
       tag_placeholder: "Add tags to your post"
-      tags: Tags
-      state: State
+      tags: "Tags"
+      state: "State"
     share_bar:
       facebook: "en_US"
   time:
