--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -31,6 +31,7 @@ de:
       edit: "bearbeiten"
       delete: "löschen"
       are_you_sure_you_want_to_remove_this_post: "Bist Du sicher, dass Du den Beitrag löschen möchtest?"
+      comments: "Kommentare"
       comment:
         one: "ein Kommentar"
         other: "%{count} Kommentare"
