--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -28,7 +28,7 @@ fr:
       delete: "supprimer"
       are_you_sure_you_want_to_remove_this_post: "Etes vous certain de vouloir supprimer cet article?"
       comments: "Commentaires"
-      comment:
+      comments_count:
         zero: "Aucun commentaire"
         one: "1 commentaire"
         other: "%{count} commentaires"
